--- a/style/style.css
+++ b/style/style.css
@@ -16,3 +16,34 @@
   border: 1px solid;
   padding: 10px;
 }
+
+.banner{
+  /* background: url("../assets/Hero-bg.png") no-repeat cover; */
+  background: url('../assets/Hero-bg.png') no-repeat;
+}
+
+.banner-container{
+  text-align: center;
+  padding: 40px;
+}
+
+.banner-container img {
+  width: 200px;
+}
+.banner-container p{
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.banner-container div{
+  margin-top: 30px;
+  
+}
+.banner-container div a{
+  text-decoration: none;
+  background-color: black;
+  padding: 15px;
+  border-radius: 10px;
+  color: white;
+  font-size: 15px;
+}
