finised main part

--- a/style/style.css
+++ b/style/style.css
@@ -47,3 +47,116 @@
   color: white;
   font-size: 15px;
 }
+
+.development{
+  background: rgba(13, 19, 33, 0.02);
+  text-align: center;
+  border-radius: 16px;
+  
+}
+
+p{
+  font-size: 12px;
+}
+
+.web-container{
+  margin:50px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 200px;
+  text-align: left;
+ 
+}
+
+.web-container img{
+  width: 180px;
+}
+
+.btn{
+  border: 1px solid;
+  width: 100px;
+  padding: 10px;
+  font-weight: 600;
+}
+
+.inspiration{
+  margin-top:100px;
+  text-align: center;
+}
+
+.video-container {
+  text-align: center;
+  border: 1px solid;
+  width: 800px;
+  height: 430px;
+  margin: 30px auto 50px auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.video{
+  border-radius: 10px;
+}
+
+.target {
+  text-align: center;
+}
+
+.target-container {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0px 50px 0px;
+}
+
+.box {
+  text-align: left;
+  padding: 20px;
+  border-radius: 10px;
+  width: 210px;
+}
+.box div a {
+  color: black;
+  font-size: 12px;
+  font-weight: 700;
+}
+.box1{
+  background-color: rgba(255, 76, 30, 0.05);
+}
+.box2{
+  background-color: rgba(0, 76, 232, 0.05);
+}
+.box3{
+  background-color: rgba(255, 223, 0, 0.05);;
+}
+
+.support{
+  background: url('../assets/handshake.jpg') no-repeat center center;
+  background-size: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  margin-bottom: 50px;
+}
+
+main{
+  width: 800px;
+  margin: 0 auto;
+}
+
+input{
+  padding: 10px;
+  border-radius: 5px;
+  border:1px solid white;
+}
+.input1{
+  width: 400px;
+  font-weight: 300;
+}
+.input2{
+  font-weight: 700;
+}
