--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,8 @@
   display: flex;
   justify-content: space-between;
   width: 1000px ;
-  margin:0 auto;
+  margin:0 auto 30px auto;
+
 }
 
 #button{
